cluster/applications/pihole/envoy.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-api
  namespace: pihole
spec:
  gatewayClassName: envoy
  infrastructure:
    labels:
      app: envoy-gateway
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same  # Same or All or Selector
    - name: dns-tcp
      protocol: TCP
      port: 53
      allowedRoutes:
        namespaces:
          from: Same
    - name: dns-udp
      protocol: UDP
      port: 53
      allowedRoutes:
        namespaces:
          from: Same
    # - name: https
    #   protocol: HTTPS
    #   port: 443
    #   tls:
    #     mode: Terminate
    #     certificateRefs:
    #       - name: secret-tls
    #         namespace: default
    #   allowedRoutes:
    #     namespaces:
    #       from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pihole-web-route
  namespace: pihole
spec:
  parentRefs:
  - name: gateway-api
    sectionName: http #allows us to bind to a specific listener in the Gateway
    kind: Gateway
  rules:
  - matches:
    - path: 
        type: Exact
        value: /admin
  - backendRefs:
    - name: pihole-web
      port: 80
      weight: 1
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: pihole-dns-route
  namespace: pihole
spec:
  parentRefs:
  - name: gateway-api
    sectionName: dns-tcp
    kind: Gateway
  rules:
  - backendRefs:
    - name: pihole-dns
      port: 53
      weight: 1
